--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
     <nav>
       <ul>
-        <li><a href="link.html"><img src="images/apple.png" alt="Apple-logo"></a></li>
-        <li><a href="link.html">Store</a></li>
-        <li><a href="link.html">Mac</a></li>
-        <li><a href="link.html">iPod</a></li>
-        <li><a href="link.html">iPhone</a></li>
-        <li><a href="link.html">iPad</a></li>
-        <li><a href="link.html">iTunes</a></li>
-        <li><a href="link.html">Support</a></li>
-        <li>
+        <li><a href="link.html"></a></li>
+        <li><a href="link.html"><span>Store</span></a></li>
+        <li><a href="link.html"><span>Mac</span></a></li>
+        <li><a href="link.html"><span>iPod</span></a></li>
+        <li><a href="link.html"><span>iPhone</span></a></li>
+        <li><a href="link.html"><span>iPad</span></a></li>
+        <li><a href="link.html"><span>iTunes</span></a></li>
+        <li><a href="link.html"><span>Support</span></a></li>
+        <li class="search">
           <form>
             <input type="text" name="search">
           </form>
@@ -26,7 +26,7 @@
     </nav>
 
     <header>
-      <section>
+      <section class="hero">
         <a href="link.html"></a>
         <div>
           <h1>What will your verse be?</h1>
@@ -35,7 +35,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="iphone-s">
         <a href="link.html"></a>
         <div>
           <p>iPhone 5 <span>S</span></p>
@@ -43,7 +43,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="iphone-c">
         <a href="link.html"></a>
         <div>
           <p>iPhone 5 <span>C</span></p>
@@ -51,15 +51,15 @@
         </div>
       </section>
 
-      <section>
+      <section class="explore">
         <a href="link.html"></a>
         <div>
           <p>Happy Birthday, Mac.</p>
           <p>Explore 30 years of innovation on the Mac.</p>
         </div>
       </section>
-      
-      <section>
+
+      <section class="responsiblity">
         <a href="link.html"></a>
         <div>
           <p>Supplier Responsiblity</p>
