--- a/index.html
+++ b/index.html
@@ -69,29 +69,29 @@
     </header>
 
     <footer>
-      <div>
+      <div class="shop">
         Shop the
-        <a>Apple Online Store</a>
+        <a href="link.html">Apple Online Store</a>
         (1-800-MY-APPLE), visit an
-        <a>Apple Retail Store</a>, 
+        <a href="link.html">Apple Retail Store</a>, 
         or find a
-        <a>reseller</a>.
+        <a href="link.html">reseller</a>.
       </div>
       
-      <ul>
+      <ul class="links">
         <li><a href="link.html">Site Map</a></li>
-        <li> | <a href="link.html">Hot News</a></li>
-        <li> | <a href="link.html">RSS Feeds</a></li>
-        <li> | <a href="link.html">Media Info</a></li>
-        <li> | <a href="link.html">Environment</a></li>
-        <li> | <a href="link.html">Job Opportunities</a></li>
-        <li> | <a href="link.html">Contact Us</a></li>
-        <li> | <a href="link.html"><img src="images/usa.png" alt="Lots of Stars and Stripes"></a></li>
+        <li> &nbsp;|&nbsp; <a href="link.html">Hot News</a></li>
+        <li> &nbsp;|&nbsp; <a href="link.html">RSS Feeds</a></li>
+        <li> &nbsp;|&nbsp; <a href="link.html">Media Info</a></li>
+        <li> &nbsp;|&nbsp; <a href="link.html">Environment</a></li>
+        <li> &nbsp;|&nbsp; <a href="link.html">Job Opportunities</a></li>
+        <li> &nbsp;|&nbsp; <a href="link.html">Contact Us</a></li>
+        <li> &nbsp;|&nbsp; <a href="link.html"><img src="images/usa.png" alt="Lots of Stars and Stripes"></a></li>
       </ul>
 
-      <div>
+      <div class="copyright">
         Copyright © 2014 Apple Inc. All rights reserved. 
-        <a href="link.html">Terms of Use</a> | 
+        <a href="link.html">Terms of Use</a><span> &nbsp;|&nbsp; </span>
         <a href="link.html">Privacy Policy</a>
       </div>
     </footer>
