--- a/index.html
+++ b/index.html
@@ -30,41 +30,25 @@
         <a href="link.html"></a>
         <div>
           <h1>What will your verse be?</h1>
-          <p>Everyone has something to share. See how people are using iPad in their unique ways to add to the world's story.</p>
-          <p><a href="link.html">Watch the "Your Verse" film and explore the stories</a></p>
+          <h2>Everyone has something to share. See how people are using iPad in their unique ways to add to the world's story.</h2>
+          <a href="link.html">Watch the "Your Verse" film and explore the stories<img src="/images/play.png" alt="play-button"></a>
         </div>
       </section>
 
       <section class="iphone-s">
         <a href="link.html"></a>
-        <div>
-          <p>iPhone 5 <span>S</span></p>
-          <p>Forward thinking.</p>
-        </div>
       </section>
 
       <section class="iphone-c">
         <a href="link.html"></a>
-        <div>
-          <p>iPhone 5 <span>C</span></p>
-          <p>For the colorful.</p>
-        </div>
       </section>
 
       <section class="explore">
         <a href="link.html"></a>
-        <div>
-          <p>Happy Birthday, Mac.</p>
-          <p>Explore 30 years of innovation on the Mac.</p>
-        </div>
       </section>
 
-      <section class="responsiblity">
+      <section class="responsibility">
         <a href="link.html"></a>
-        <div>
-          <p>Supplier Responsiblity</p>
-          <p>The latest results of our worldwide efforts.</p>
-        </div>
       </section>
     </header>
 
